fixing header wrapping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,7 +9,9 @@ header {
 
   // Positioning context for the mobile navigation icon
   position: relative;
-
+  .wrapper{
+    padding: 0 10px;
+  }
   ul{ 
     float: right;
   }
